--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -59,7 +59,7 @@
                   <h5 class="card-title text-uppercase text-muted mb-0">Active Requests</h5>
                   <div class="row">
                   <div class="col"><span class="h2 font-weight-bold mb-0">{{dashboard.active}}</span> </div>
-                  <div class="col"><a [routerLink]="['/all-active-requests']" class="btn-sm btn btn-primary">Show all</a></div>
+                  <div class="col"><a class="btn-sm btn btn-primary">Show all</a></div>
                   </div>
                 </div>
                 <div class="col-auto">
@@ -83,7 +83,7 @@
                   <h5 class="card-title text-uppercase text-muted mb-0">Completed</h5>
                   <div class="row">
                   <div class="col"><span class="h2 font-weight-bold mb-0">{{dashboard.completed}}</span> </div>
-                  <div class="col"><a [routerLink]="['/all-completed']" class="btn-sm btn btn-primary">Show all</a></div>
+                  <div class="col"><a class="btn-sm btn btn-primary">Show all</a></div>
                   </div>
                 </div>
                 <div class="col-auto">
