--- a/src/app/pages/request-detail/request-detail.component.html
+++ b/src/app/pages/request-detail/request-detail.component.html
@@ -10,76 +10,74 @@
     <div class="row">
       <div class="col">
         <div class="card shadow border-0 p-10" [ngClass]="{'placed': true}">
-                <div class="form-row">
-                    <div class="form-group col-md-20">                      
-                      <div id="title" (click)="updateFormVisibility('title')"><h1>Title(required) </h1></div>
-                      <span class="glyphicon">&#x270f;</span>
-                      <div id="title" *ngIf="!formVisibility.title">{{title}}</div>                      
-                      <input *ngIf="formVisibility.title" [(ngModel)]="title" type="text" id="title" aria-describedby="title">
-                    </div>
-                    <div class="form-row -2"></div>
-                    <div class="form-group col col-md-20">
-                      <label for="inputAddress" (click)="updateFormVisibility('message')"><h1>Message(required)</h1></label>
-                      <div for="inputAddress" *ngIf="!formVisibility.message">{{message}}</div>
-                      <span class="glyphicon">&#x270f;</span>
-                      <input *ngIf="formVisibility.message" [(ngModel)]="message" type="text" id="message" aria-describedby="message">
-                    </div>
-                    <div class="form-group col-md-4">
-                      <div for="inputState" (click)="updateFormVisibility('priority')"><h1>Priority(required)</h1></div>
-                      <span class="glyphicon">&#x270f;</span>
-                      <div for="inputState" *ngIf="!formVisibility.priority">{{priority}}</div>
-                      <input *ngIf="formVisibility.priority" [(ngModel)]="priority" type="text" id="priority" aria-describedby="priority">
-                    </div>
-                   
-                </div>
-                <div class="form-row">
-                  <div class="form-group col-md-4">
-                    <label for="inputCity">By</label>
-                    <div>{{first_name}} {{last_name}}</div>
-                  </div>
-                  <div class="form-group col-md-4">
-                    <label for="inputZip">Posted On</label>
-                    <div>{{date_created}}</div>
-                  </div>
-                </div>
-                <div *ngIf="memberOwnsRequest()">
-                  <button type="button" class="btn btn-danger" (click)="removeRequest()">Remove request</button>
-                  <button *ngIf="show_confirm_cancel" type="button" class="btn btn-success" (click)="cancelRemove()">Cancel</button>
-                  <button *ngIf="show_confirm_cancel" type="button" class="btn btn-danger" (click)="confirmRemove()">Confirm</button>
-                  <div *ngIf="show_confirm_cancel">{{removal_content}}</div>
-                </div>
-                <div *ngIf="!request_already_picked && !memberOwnsRequest()">
-                  <div *ngIf="total_volunteers > 0; then thenBlock else elseBlock"></div>
-                </div>
-                <div *ngIf="request_already_picked">Thanks for picking this request</div>
-                <div class="row">
-                  <div class="col-md">
-                    <app-comments [object_id]="request_id"></app-comments>
-                  </div>
-                </div>
-                
-                <ng-template #thenBlock>
-                  <div class="row">
-                    <div class="col-md text-right">
-                      <button  *ngIf="!request_already_picked" type="button" class="btn btn-success" (click)="taskPicked()">I Can Help Too</button>
-                    </div>
-                    <div class="col-md">
-                      {{total_volunteers}} awesome volunteers are working on this request.
-                    </div>                    
-                  </div>
-                </ng-template>
-                <ng-template #elseBlock>
-                  <div class="row">
-                    <div class="col-md text-right">
-                      <button type="button" class="btn btn-success" (click)="taskPicked()">I Can Help Too</button>
-                    </div>
-                    <div class="col-md">
-                      Be the hero by picking this 
-                    </div>                    
-                  </div>
-                </ng-template>
+          <div class="form-row">
+            <div class="form-group col-md-12">
+              <div *ngIf="!editable" (click)="switchEditable()" id="title">{{title}}</div>
+              <input *ngIf="editable" formControlName="title" class="form-control" id="title" value="{{title}}" />
+            </div>
+          </div>
+          <form [formGroup]="editForm" (ngSubmit)="editRequest()">
+          <div class="form-group">
+            <label for="inputAddress">Message</label>
+            <div *ngIf="!editable" formControlName="request" (click)="switchEditable()">{{message}}</div>
+            <textarea rows="6" *ngIf="editable" class="form-control" id="message">{{message}}"</textarea>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="inputCity">By</label>
+              <div>{{first_name}} {{last_name}}</div>
+            </div>
+            <div class="form-group col-md-4">
+              <label for="inputState">Priority</label>
+              <div>{{priority}}</div>
+            </div>
+            <div class="form-group col-md-2">
+              <label for="inputZip">Posted On</label>
+              <div>{{date_created}}</div>
+            </div>
+          </div>
+          <button *ngIf="editable" [disabled]='!editForm.valid' type="submit" class="btn btn-primary">Update</button>
+          </form>
+          <div *ngIf="memberOwnsRequest()">
+            <button type="button" class="btn btn-danger" (click)="removeRequest()">Remove request</button>
+            <button *ngIf="show_confirm_cancel" type="button" class="btn btn-success"
+              (click)="cancelRemove()">Cancel</button>
+            <button *ngIf="show_confirm_cancel" type="button" class="btn btn-danger"
+              (click)="confirmRemove()">Confirm</button>
+            <div *ngIf="show_confirm_cancel">{{removal_content}}</div>
+          </div>
+          <div *ngIf="!request_already_picked && !memberOwnsRequest()">
+            <div *ngIf="total_volunteers > 0; then thenBlock else elseBlock"></div>
+          </div>
+          <div *ngIf="request_already_picked">Thanks for picking this request</div>
+          <div class="row">
+            <div class="col-md">
+              <app-comments [object_id]="request_id"></app-comments>
+            </div>
+          </div>
+  
+          <ng-template #thenBlock>ß
+            <div class="row">
+              <div class="col-md text-right">
+                <button *ngIf="!request_already_picked" type="button" class="btn btn-success" (click)="taskPicked()">I Can
+                  Help Too</button>
+              </div>
+              <div class="col-md">
+                {{total_volunteers}} awesome volunteers are working on this request.
+              </div>
+            </div>
+          </ng-template>
+          <ng-template #elseBlock>
+            <div class="row">
+              <div class="col-md text-right">
+                <button type="button" class="btn btn-success" (click)="taskPicked()">I Can Help Too</button>
+              </div>
+              <div class="col-md">
+                Be the hero by picking this
+              </div>
+            </div>
+          </ng-template>
         </div>
       </div>
     </div>
   </div>
-  
