--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,7 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Our Professionals</h5>
+                  <h5 class="card-title text-uppercase text-muted mb-0">Our Professionals:</h5>
                   <div class="row">
                     <div class="col"><span class="h2 font-weight-bold mb-0">{{dashboard.professionals}}</span> </div>
                   <div class="col"><a [routerLink]="['/awesome-professionals']" class="btn-sm btn btn-primary">Show all</a></div>
@@ -32,7 +32,7 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Our Volunteers</h5>
+                  <h5 class="card-title text-uppercase text-muted mb-0">Our Volunteers:</h5>
                   <div class="row">
                     <div class="col"><span class="h2 font-weight-bold mb-0">{{dashboard.volunteers}}</span> </div>
                     <div class="col"><a [routerLink]="['/all-volunteers']" class="btn-sm btn btn-primary">Show all</a></div>
@@ -56,7 +56,7 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Active Requests</h5>
+                  <h5 class="card-title text-uppercase text-muted mb-0">Active Requests:</h5>
                   <span class="h2 font-weight-bold mb-0">{{dashboard.active}}</span>
                 </div>
                 <div class="col-auto">
@@ -77,7 +77,7 @@
             <div class="card-body">
               <div class="row">
                 <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">Completed</h5>
+                  <h5 class="card-title text-uppercase text-muted mb-0">Completed:</h5>
                   <span class="h2 font-weight-bold mb-0">{{dashboard.completed}}</span>
                 </div>
                 <div class="col-auto">
