implement deactivate on professional listing

--- a/src/app/pages/awesome-professionals/awesome-professionals.component.html
+++ b/src/app/pages/awesome-professionals/awesome-professionals.component.html
@@ -30,10 +30,9 @@
                   </td>
                   <td>
                     <a>{{professional.email}}</a>
-
                   </td>
                   <td>
-                    <button id="Deactivate" type="button" class="btn-sm btn-primary">Deactivate</button>
+                    <button id="Deactivate" (click)="deactivate(professional)" type="button" class="btn-sm btn-primary">Deactivate</button>
                   </td>
                 </tr>
               </tbody>
