change deactive to Active

--- a/src/app/pages/awesome-professionals/awesome-professionals.component.html
+++ b/src/app/pages/awesome-professionals/awesome-professionals.component.html
@@ -32,7 +32,7 @@
                     <a>{{professional.email}}</a>
                   </td>
                   <td>
-                    <button id="Deactivate" (click)="deactivate(professional)" type="button" class="btn-sm btn-primary">Deactivate</button>
+                    <button id="Active" (click)="Active(professional)" type="button" class="btn-sm btn-primary">Active</button>
                   </td>
                 </tr>
               </tbody>
