--- a/src/app/pages/all-volunteers/all-volunteers.component.html
+++ b/src/app/pages/all-volunteers/all-volunteers.component.html
@@ -14,7 +14,7 @@
             <table class="table align-items-center table-flush">
               <thead class="thead-light">
                 <tr>
-                  <th scope="col">FFFFirst Name</th>
+                  <th scope="col">First Name</th>
                   <th scope="col">Last Name</th>
                   <th scope="col">email</th> 
                   <th scope="col">Action</th>
@@ -32,7 +32,7 @@
                     <a>{{volunteer.email}}</a>
                   </td>
                   <td>
-            <button id="Deactivate" type="button" class="btn-sm btn-primary">Deactivate</button> 
+            <button (click)="deactivateIndividual(individual_id)" type="button" class="btn-sm btn-primary">Deactivate</button> 
                   </td>
                 </tr>
               </tbody>
