--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -72,7 +72,7 @@
           <a href="javascript:void(0)" class="text-light"><small>Forgot password?</small></a>
         </div>
         <div class="col-6 text-right">
-          <a href="/#/register" class="text-light"><small>Create new account</small></a>
+          <a [routerLink]="['/register']"class="text-light"><small>Create new account</small></a>
         </div>
       </div>
     </div>
