--- a/src/app/pages/all-volunteers/all-volunteers.component.html
+++ b/src/app/pages/all-volunteers/all-volunteers.component.html
@@ -1,44 +1,45 @@
 <div class="header bg-gradient-danger pb-8 pt-5 pt-md-8">
-    <div class="container-fluid">
-      <div class="header-body">
-        <!-- Card stats -->
-      </div>
+  <div class="container-fluid">
+    <div class="header-body">
+      <!-- Card stats -->
     </div>
   </div>
-  <!-- Page content -->
-  <div class="container-fluid mt--7">
-    <div class="row">
-      <div class="col">
-        <div class="card shadow border-0">
-          <div class="">
-            <table class="table align-items-center table-flush">
-              <thead class="thead-light">
-                <tr>
-                  <th scope="col">FFFFirst Name</th>
-                  <th scope="col">Last Name</th>
-                  <th scope="col">email</th> 
-                  <th scope="col">Action</th>
-                </tr>
-              </thead>
-              <tbody *ngFor="let volunteer of volunteers">
-                <tr>
-                  <th scope="row">
-                    <a>{{volunteer.first_name}}</a>
-                  </th>
-                  <td>
-                    <a>{{volunteer.last_name}}</a>
-                  </td>
-                  <td>
-                    <a>{{volunteer.email}}</a>
-                  </td>
-                  <td>
-            <button id="Deactivate" type="button" class="btn-sm btn-primary">Deactivate</button> 
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+</div>
+<!-- Page content -->
+<div class="container-fluid mt--7">
+  <div class="row">
+    <div class="col">
+      <div class="card shadow border-0">
+        <div class="">
+          <table class="table align-items-center table-flush">
+            <thead class="thead-light">
+              <tr>
+                <th scope="col">First Name</th>
+                <th scope="col">Last Name</th>
+                <th scope="col">email</th>
+                <th scope="col">Action</th>
+              </tr>
+            </thead>
+            <tbody *ngFor="let volunteer of volunteers">
+              <tr>
+                <th scope="row">
+                  <a>{{volunteer.first_name}}</a>
+                </th>
+                <td>
+                  <a>{{volunteer.last_name}}</a>
+                </td>
+                <td>
+                  <a>{{volunteer.email}}</a>
+                </td>
+                <td>
+                  <button [attr.individual_id]="volunteer.individual_id" [attr.status]="volunteer.active" (click)='switchStatus($event)' 
+                  [ngClass]="volunteer.active == 0 ? 'btn-success' : 'btn-danger'" type="button" class="btn-sm">{{volunteer.active == 0 ? 'Activate' : 'Deactivate'}}</button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
   </div>
+</div>
