--- a/src/app/pages/request/request.component.html
+++ b/src/app/pages/request/request.component.html
@@ -22,6 +22,8 @@
               <option value="2">Medium</option>
               <option value="3">Low</option>
             </select>
+          </div>
+            <div class="form-group">
             <select  class="form-control" *ngIf="showPeriod">            
               <option value="1">With in a day</option>
               <option value="2">With in two days</option>
