sol password change field

--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -134,6 +134,24 @@
                     <label class="form-control-label" for="input-country">City</label>
                     <input type="text" id="input-postal-code" class="form-control form-control-alternative" placeholder="Postal code">
                   </div>
+                  <div class="form-group">
+                    <label for="inputOldPassword">Old Password</label>
+                    <input type="password" class="form-control" id="inputOldPassword">
+                  </div>
+                  
+                  <div class="form-group">
+                      <label for="inputNewPassword">New Password</label>
+                      <input type="password" class="form-control" id="inputNewPassword">
+                    </div>
+      
+                    <div class="form-group">
+                      <label for="inputConfirmNewPassword">Confirm New Password</label>
+                      <input type="password" class="form-control" id="inputConfirmNewPassword">
+                    </div>
+      
+                    <div>
+                      <button type="submit" class="btn btn-primary">Submit</button>
+                      </div>
                 </div>
               </div>
             </div>
