--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -23,7 +23,8 @@
               <img alt="Image placeholder" src="assets/img/theme/team-4-800x800.jpg">
             </span>
             <div class="media-body ml-2 d-none d-lg-block">
-              <span class="mb-0 text-sm  font-weight-bold">{{firstName}}</span>
+              <span class="mb-0 text-sm  font-weight-bold">{{firstName}} {{lastName}} </span>
+            
             </div>
           </div>
         </a>
