consolidate-edit-profile

--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -91,7 +91,7 @@
                 <div class="col-lg-12">
                   <div class="form-group">
                     <label class="form-control-label" for="input-username">Email</label>
-                    <div class="border border-info rounded">{{email}}</div>
+                    <input type="text" formControlName="email" id="input-username" class="form-control form-control-alternative" placeholder="{{email}}">
                   </div>
                 </div>
                 <div class="col-lg-6">
@@ -101,13 +101,13 @@
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-first-name">First name</label>
-                    <div class="border border-info rounded">{{firstName}}</div>
+                    <input type="text" formControlName="firstName" id="input-first-name" class="form-control form-control-alternative" placeholder="{{firstName}}">
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-last-name">Last name</label>
-                    <div class="border border-info rounded">{{lastName}}</div>
+                    <input type="text" formControlName="lastName" id="input-last-name" class="form-control form-control-alternative" placeholder="{{lastName}}">
                   </div>
                 </div>
               </div>
@@ -120,7 +120,7 @@
                 <div class="col-lg-4">
                   <div class="form-group">
                     <label class="form-control-label" for="input-city">State</label>
-                    <input type="text" id="input-city" class="form-control form-control-alternative" placeholder="City" value="">
+                    <input type="text" id="input-city" class="form-control form-control-alternative" placeholder="State" value="">
                   </div>
                 </div>
                 <!-- <div class="col-lg-4">
@@ -132,7 +132,7 @@
                 <div class="col-lg-4">
                   <div class="form-group">
                     <label class="form-control-label" for="input-country">City</label>
-                    <input type="text" id="input-postal-code" class="form-control form-control-alternative" placeholder="Postal code">
+                    <input type="text" id="input-postal-code" class="form-control form-control-alternative" placeholder="city">
                   </div>
                 </div>
               </div>
