--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -69,7 +69,11 @@
       </div>
       <div class="row mt-3">
         <div class="col-6">
-          <a href="javascript:void(0)" class="text-light"><small>Forgot password?</small></a>
+          <a href="!#" class="text-light" id="forgotPassword"><small>Forgot password?</small></a>
+          <div *ngif="forgotPassword">
+            <input class="form-control" formControlName="forgotPassword" placeholder="Email your email address" type="email">
+            <button [disabled] = 'loginForm.invalid' type="submit" class="btn btn-primary my-4">Reset password</button> 
+          </div>
         </div>
         <div class="col-6 text-right">
           <a href="javascript:void(0)" class="text-light"><small>Create new account</small></a>
