--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -13,10 +13,7 @@
           <div class="card-header bg-white border-0">
             <div class="row align-items-center">
               <div class="col-4">
-                <h3 class="mb-0">My account</h3>
-              </div>
-              <div class="col-4 text-right">
-                <a href="#!" class="btn btn-sm btn-primary">Settings</a>
+                <h3 class="mb-0">My Profile - Click for Edit</h3>
               </div>
             </div>
           </div>
@@ -28,7 +25,8 @@
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-username">Email</label>
-                    <input type="text" formControlName="email" class="form-control form-control-alternative" placeholder="Email" >
+                    <div *ngIf="!editable" (click)="switchEditable()">{{email}}</div>
+                    <input *ngIf="editable" type="text" formControlName="email" id="input-email" class="form-control form-control-alternative" placeholder="Email" >
                   </div>
                 </div>
                 <div class="col-lg-6">
@@ -38,13 +36,15 @@
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-first-name">First name</label>
-                    <input type="text" formControlName="firstName" id="input-first-name" class="form-control form-control-alternative" placeholder="First name">
+                    <div *ngIf="!editable" (click)="switchEditable()">{{firstName}}</div>
+                    <input *ngIf="editable" type="text" formControlName="firstName" id="input-email" class="form-control form-control-alternative" placeholder="First Name" >
                   </div>
                 </div>
                 <div class="col-lg-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-last-name">Last name</label>
-                    <input formControlName="lastName" type="text" id="input-last-name" class="form-control form-control-alternative" placeholder="Last name" >
+                    <div *ngIf="!editable" (click)="switchEditable()">{{lastName}}</div>
+                    <input *ngIf="editable" type="text" formControlName="lastName" id="input-email" class="form-control form-control-alternative" placeholder="Last Name" >
                   </div>
                 </div>
               </div>
@@ -57,7 +57,8 @@
                   <div class="col-lg-6">
                     <div class="form-group">
                       <label class="form-control-label" for="input-country">State</label>
-                      <select formControlName="state" class="form-control" (change)="populateCity($event.target.value)">
+                      <div *ngIf="!editable" (click)="switchEditable()">{{state}}</div>
+                      <select *ngIf="editable" formControlName="state" class="form-control" (change)="populateCity($event.target.value)">
                         <option value="">Select State</option>
                         <label class="form-control-label" for="input-city">State</label>
                         <option *ngFor="let s of states" value="{{s.state_id}}">{{s.name}}</option>
@@ -67,7 +68,8 @@
                   <div class="col-lg-6">
                     <div class="form-group">
                       <label class="form-control-label" for="input-country">City</label>
-                      <select formControlName="city" class="form-control">
+                      <div *ngIf="!editable" (click)="switchEditable()">{{city}}</div>
+                      <select *ngIf="editable" formControlName="city" class="form-control">
                         <option value="">Select City</option>
                         <option *ngFor="let c of cities" value="{{c.city_id}}">{{c.name}}</option>
                       </select>
@@ -75,12 +77,12 @@
                   </div>
                 </div>
               </div>
-              <div class="row">
+              <div *ngIf="editable" class="row">
                 <div class="col-4 text-right">
                     <button type="submit" class="btn btn-sm btn-primary">Edit</button>
                     <div>{{message}}</div>
                 </div>
-                </div>
+              </div>
               <hr class="my-4" />
               <!-- Description -->
               <!-- <h6 class="heading-small text-muted mb-4">About me</h6>
