--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -127,7 +127,7 @@
             <tbody *ngFor="let request of requests">
               <tr [ngClass]="{'placed': request.status_name == 'PLACED', 'picked': request.status_name == 'PICKED'}">
                 <th scope="row">
-                  <a [routerLink]="['/user-profile']">{{request.first_name | titlecase}} {{request.last_name | titlecase}}</a>
+                  <a [routerLink]="['/edit-profile']">{{request.first_name | titlecase}} {{request.last_name | titlecase}}</a>
                 </th>
                 <td>
                   <a [title]="request.title" [routerLink]="['/request-detail',request.request_id]">{{ request.title.length > 25 ? (request.title | slice:0:25) + '.....' : request.title}}</a>
