show role on the page

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,2 +1,10 @@
 .placed {color: rgb(237, 154, 45)}
 .picked {color: rgb(66, 121, 8)}
+
+.member-role {
+    text-align: end;
+    color: gray;
+    font-size: 13px;
+    font-weight: 100;
+    margin-bottom: 15px;
+}
