--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -103,6 +103,11 @@
     <div class="col-xl-12 mb-5 mb-xl-0">
       <div class="card shadow">
         <div class="card-header border-0">
+          <div class="row">
+            <div class="col member-role">
+              <span class="mb-0">Logged as {{member_role}}</span>
+            </div>
+          </div>
           <div class="row align-items-center">
             <div class="col">
               <h3 class="mb-0">Active Requests</h3>
