showing missing registration info

--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -63,7 +63,7 @@
                 <input formControlName="password" class="form-control" placeholder="password" type="password">
               </div>
             </div>
-            <div [ngClass]="{'success': !registerForm.invalid, 'error': registerForm.invalid}">{{message}}</div>      
+            <div [ngClass]="{'success': !registerForm.invalid, 'error': registerForm.invalid}">Fill All Three</div>      
             <div class="text-center">
               <button [disabled]="registerForm.invalid" type="submit" class="btn btn-primary mt-4">Create account</button>
             </div>
