--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -113,6 +113,7 @@
               <h3 class="mb-0">Active Requests</h3>
             </div>
             <div class="col text-right">
+              <a href="#!" class="btn btn-sm btn-primary">logged in as</a>
             </div>
           </div>
         </div>
