--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -45,22 +45,18 @@
                   <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                 </div>
                 <input formControlName="firstName" class="form-control" placeholder="First Name" type="text">
-                <div *ngIf="myForm.controls.firstName.invalid"
-                      class="alert alert-danger">
-                      <div *ngIf="myForm.controls.firstName.errors.required">
-                        First Name is Required.
               </div>
             </div>            
             <div class="form-group">
               <div class="input-group input-group-alternative mb-3">
-                <div class="input-group-prepend">
+                <div class="input-group-prepend"></div>
                   <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+                    <div *ngIf="registerForm.errors" class="invalid">
+                      <div *ngIf="(registerForm.touched || registerForm.dirty) && registerForm.invalid && registerForm.errors.required">
+                        Email is required.
+                      </div>
                 </div>
                 <input formControlName="email" class="form-control" placeholder="Email" type="email">
-                <div *ngIf="myForm.controls.email.invalid"
-                      class="alert alert-danger">
-                      <div *ngIf="myForm.controls.email.errors.required">
-                        Email is Required.
                 </div>
               </div>
             </div>
@@ -70,10 +66,6 @@
                   <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                 </div>
                 <input formControlName="password" class="form-control" placeholder="password" type="password">
-                <div *ngIf="myForm.controls.password.invalid"
-                      class="alert alert-danger">
-                      <div *ngIf="myForm.controls.password.errors.required">
-                       Password is Required.
               </div>
             </div>
             <div [ngClass]="{'success': !registerForm.invalid, 'error': registerForm.invalid}">{{message}}</div>      
