--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -40,27 +40,34 @@
           </div>
           <form [formGroup]="registerForm" role="form" (ngSubmit)="onSubmit()">
             <div class="form-group">
+              <span class="error" *ngIf="(registerForm.controls.firstName.touched || registerForm.controls.firstName.dirty) 
+              && registerForm.controls.firstName.invalid">
+              Name is required.
+            </span>
               <div class="input-group input-group-alternative mb-3">
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                 </div>
                 <input formControlName="firstName" class="form-control" placeholder="First Name" type="text">
               </div>
-            </div>            
+            </div>
             <div class="form-group">
+              <span class="error" *ngIf="(registerForm.controls.email.touched || registerForm.controls.email.dirty) 
+              && (registerForm.controls.email.invalid || registerForm.controls.email.required)">
+              Email is required.
+            </span>
+            <div class="input-group-prepend">
               <div class="input-group input-group-alternative mb-3">
-                <div class="input-group-prepend"></div>
                   <span class="input-group-text"><i class="ni ni-email-83"></i></span>
-                    <div *ngIf="registerForm.errors" class="invalid">
-                      <div *ngIf="(registerForm.touched || registerForm.dirty) && registerForm.invalid && registerForm.errors.required">
-                        Email is required.
-                      </div>
-                </div>
-                <input formControlName="email" class="form-control" placeholder="Email" type="email">
+                  <input formControlName="email" class="form-control" placeholder="Email" type="email" />
                 </div>
               </div>
             </div>
             <div class="form-group">
+              <span class="error" *ngIf="(registerForm.controls.password.touched || registerForm.controls.password.dirty) 
+              && registerForm.controls.password.invalid">
+              Password is required.
+            </span>
               <div class="input-group input-group-alternative mb-3">
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-email-83"></i></span>
@@ -68,9 +75,10 @@
                 <input formControlName="password" class="form-control" placeholder="password" type="password">
               </div>
             </div>
-            <div [ngClass]="{'success': !registerForm.invalid, 'error': registerForm.invalid}">{{message}}</div>      
+            <div [ngClass]="{'success': !registerForm.invalid, 'error': registerForm.invalid}">{{message}}</div>
             <div class="text-center">
-              <button [disabled]="registerForm.invalid" type="submit" class="btn btn-primary mt-4">Create account</button>
+              <button [disabled]="registerForm.invalid" type="submit" class="btn btn-primary mt-4">Create
+                account</button>
             </div>
           </form>
         </div>
